--- a/index.html
+++ b/index.html
@@ -13,82 +13,80 @@
       </div>
     </header>
     <div class="main-container">
-        <div class="col-xs-12 floor-map-container">
-            <div class="col-xs-2 floor-map-nav">
-                <ul class="nav nav-pills nav-stacked">
-                    <li id="first-floor" class="floor-nav active" role="presentation" value=1><a href="#">First Floor</a></li>
-                    <li id="second-floor" class="floor-nav" role="presentation" value=2><a href="#">Second Floor</a></li>
-                    <li id="third-floor" class="floor-nav" role="presentation" value=3><a href="#">Third Floor</a></li>
-                    <li id="forth-floor" class="floor-nav" role="presentation" value=4><a href="#">Forth Floor</a></li>
-                    <li id="fifth-floor" class="floor-nav" role="presentation" value=5><a href="#">Fifth Floor</a></li>
-                </ul>
-            </div>
-            <div class="col-xs-10">
-            	<div class="floor-map-content">
-            	</div>
-            </div>
+      <div class="col-xs-12 floor-map-container">
+        <div class="col-xs-2 floor-map-nav">
+          <ul class="nav nav-pills nav-stacked">
+            <li id="first-floor" class="floor-nav active" role="presentation" value=1><a href="#">First Floor</a></li>
+            <li id="second-floor" class="floor-nav" role="presentation" value=2><a href="#">Second Floor</a></li>
+            <li id="third-floor" class="floor-nav" role="presentation" value=3><a href="#">Third Floor</a></li>
+            <li id="forth-floor" class="floor-nav" role="presentation" value=4><a href="#">Forth Floor</a></li>
+            <li id="fifth-floor" class="floor-nav" role="presentation" value=5><a href="#">Fifth Floor</a></li>
+          </ul>
         </div>
-        <hr>
-        <div class="col-xs-6">
-        	<div class="make-reservation-container">
+        <div class="col-xs-10">
+        	<div class="floor-map-content">
         	</div>
         </div>
-        <div class="col-xs-6">
-        	<div class="manage-reservation-container">
-        	</div>
+      </div>
+      <div class="col-xs-6" id="make-reservation-container-wrapper">
+      	<div class="make-reservation-container">
+      	</div>
+      </div>
+      <div class="col-xs-6" id="manage-reservation-container-wrapper">
+      	<div class="manage-reservation-container">
+      	</div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="cancel-reservation-modal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Cancel Reservation</h4>
+          </div>
+          <div class="modal-body" id="cancel-reservation-success">
+            <p>Reservation successfully cancelled.</p>
+          </div>
+          <div class="modal-body" id="cancel-reservation-error">
+            <p>Please check if you inpput a correct room number. Or this room is not reserved.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
         </div>
-    </div>
-
-<div class="modal fade" id="cancel-reservation-modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Cancel Reservation</h4>
-      </div>
-      <div class="modal-body" id="cancel-reservation-success">
-        <p>Reservation successfully cancelled.</p>
-      </div>
-      <div class="modal-body" id="cancel-reservation-error">
-        <p>Please check if you inpput a correct room number. Or this room is not reserved.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
-  </div>
-</div>
 
-<div class="modal fade" id="check-room-availability-modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Cancel Reservation</h4>
-      </div>
-      <div class="modal-body" id="check-room-availability-success">
-        <p>This room is available .</p>
-      </div>
-      <div class="modal-body" id="check-room-availability-error">
-        <p>Please check if you inpput a correct room number. Or this room is not available.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <div class="modal fade" id="check-room-availability-modal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Cancel Reservation</h4>
+          </div>
+          <div class="modal-body" id="check-room-availability-success">
+            <p>This room is available .</p>
+          </div>
+          <div class="modal-body" id="check-room-availability-error">
+            <p>Please check if you inpput a correct room number. Or this room is not available.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-
-
-
+    <!-- Template for room box view-->
 		<script type="text/template" id="room-box-template">
 			<div class="{{roomType}} room-{{room}} availability-{{availability}}">
 				{{roomType}}<br>
 				{{roomNumber}}
 			</div>
-
 		</script>
+
+    <!-- Template for manage reservation view-->
 		<script type="text/template" id="manage-reservation-template">
 			<div class="input-group">
 				<div class="col-xs-4">
@@ -102,6 +100,8 @@
 				</div>
 			</div>
 		</script>
+
+    <!-- Template for make reservation view-->
 		<script type="text/template" id="make-reservation-template">
 			<div class="search-view">
 				<div class="col-xs-4">
@@ -118,26 +118,28 @@
 					<button type="button" class="btn btn-primary" id="make-reservation-search">Search</button>
 				</div>
 				<div class="modal fade" id="make-reservation-modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Cancel Reservation</h4>
-      </div>
-      <div class="modal-body" id="make-reservation-success">
-      </div>
-      <div class="modal-body" id="make-reservation-error">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-default" id="make-reservation-btn">OK</button>
-        <button type="button" class="btn btn-default" id="search-different-floor-btn">Continue</button>
-      </div>
-    </div>
-  </div>
-</div>
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Cancel Reservation</h4>
+              </div>
+              <div class="modal-body" id="make-reservation-success">
+              </div>
+              <div class="modal-body" id="make-reservation-error">
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" id="make-reservation-btn">OK</button>
+                <button type="button" class="btn btn-default" id="search-different-floor-btn">Continue</button>
+              </div>
+            </div>
+          </div>
+        </div>
 			</div>
 		</script>
+
+    <!-- Library referance -->
 		<script src="node_modules/todomvc-common/base.js"></script>
 		<script src="node_modules/jquery/dist/jquery.js"></script>
 		<script src="node_modules/underscore/underscore.js"></script>
@@ -147,11 +149,11 @@
 		<script src="node_modules/handlebars/dist/handlebars.js"></script>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css">
+
+    <!-- js referance-->
 		<script src="js/models/room.js"></script>
 		<script src="js/collections/rooms.js"></script>
-		<script src="js/views/todo-view.js"></script>
 		<script src="js/views/app-view.js"></script>
-		<script src="js/routers/router.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
